# hnn_utils

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: bayes-lqo-docker-publish copy.yml  docker-publish.yml  docker_build_template.yml  docker_build_template_max.yml  docker_orchestrator.yml  jax-docker-publish copy.yml  jax-docker-publish.yml  lqo-docker-publish.yml  ml_base-docker-publish copy 2.yml  ml_base-docker-publish.yml  python-publish.yml  torch-docker-publish.yml  torch-nightly-docker-publish copy.yml  torch-nightly-docker-publish.yml  torch_nightly-docker-publish.yml
docker/base/: dockerfile
docker/bayes-lqo/: dockerfile
docker/diffusion/: dockerfile
docker/dnd/: dockerfile
docker/jax/: dockerfile
docker/lqo/: dockerfile
docker/runpod/: dockerfile
docker/runpod_jax/: dockerfile
docker/tensorrt_llm/: Dockerfile
docker/torch/: dockerfile
docker/torch_nightly/: dockerfile
hnn_utils/: __init__.py
hnn_utils/callbacks/: __init__.py  ema.py
hnn_utils/datasets/: __init__.py  guacamol.py  utils.py  zinc.py
hnn_utils/datasets/vocab/: guac.json  guac_random.json  zinc20.json
hnn_utils/layers/: RotaryEmbedding.py  Transformer.py  __init__.py
hnn_utils/nn/: ALiBi.py  RoPE.py  RotaryEmbedding.py  Transformer.py  __init__.py  ffn.py  functional.py  funtional.py  normalization.py
