[tool.poetry]
name = "hnn_utils"
version = "0.3.6"
description = "Various utilities used throughout my research"
authors = ["Haydn Jones <haydnjonest@gmail.com>"]
readme = "README.md"
packages = [{ include = "hnn_utils" }]

include = ["hnn_utils/datasets/vocab/*.json"]

[tool.poetry.dependencies]
python = ">=3.7"
einops = ">=0.7"
lightning = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ANN001"]
ignore = []
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
