[project]
name = "hnn-utils"
version = "0.3.9"
description = "Various utilities used throughout my research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "lightning>=2.0.0",
    "selfies>=2.1.2",
    "rdkit>=2023.3.1",
    "einops>=0.7.0",
    "datasets>=2.19.0",
]
authors = [{ name = "Haydn Jones", email = "haydnjonest@gmail.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hnn_utils/*", "hnn_utils/datasets/vocab/*.json"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false
