[project]
name = "hnn-utils"
version = "0.3.10"
description = "Various utilities used throughout my research"
readme = "README.md"
requires-python = ">=3.10,<3.13"
# Not specifying torch dep as idk how to get it to be ok with cuda 12.4 vs 12.1 etc
dependencies = [
    "lightning>=2.0.0",
    "selfies>=2.1.2",
    "rdkit>=2023.3.1",
    "einops>=0.7.0",
    "datasets>=2.19.0",
]
authors = [{ name = "Haydn Jones", email = "haydnjonest@gmail.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hnn_utils/*", "hnn_utils/datasets/vocab/*.json"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "FURB", "ANN001"]
ignore = ["B905"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
